# igem-toronto

./: .gitignore  README.md  environment.yml  esmfold2_local_predictor.py  pyproject.toml  update_notebook.py  what are we doing.markdown  what are we doing??.markdown
Petadex nr metadata scraping/: Phase4_get_MOOOORE_papers.py  Phase4_get_more_papers.py  Phase4_get_papers.py  Phase5_get_MOORE_papers.py  README
esm-landscape/: requirements.txt
metadatatests/: README.md  pyproject.toml
metadatatests/plastic-biodegradation-analysis/: app.py
metadatatests/plastic-biodegradation-analysis/data/: plasticdb_microorganisms.tsv
metadatatests/plastic-biodegradation-analysis/notebooks/: 01_data_exploration.py  05_novel_species_discovery.py  06_cross_database_analysis.py
metadatatests/plastic-biodegradation-analysis/outputs/reports/: geographic_distribution.csv  plasticdb_scored.csv  taxonomic_diversity.json  temporal_trends.csv
metadatatests/plastic-biodegradation-analysis/src/: bioinformatics.py  visualization.py
metadatatests/plastic-biodegradation-analysis/tests/: test_analysis.py
notebooks/: 260310_issue26_interproscan.ipynb  260317_issue13_esmlandscape.ipynb  260317_issue32_esm_embeddings.ipynb  260324_issue51_clusterquantification.ipynb  260330_issue61_esmvariantgeneration.ipynb  260415_issue64_metadataenrichment.ipynb  (+18 more)
resources/260513_issue34_esm_controls/: README.md  main.py  pyproject.toml
resources/260513_issue34_esm_controls/notebooks/: controls_vis.ipynb  write_umap.py
resources/260513_issue34_esm_controls/scripts/: generate_rand_95th.py  generate_rand_empirical.py  generate_rand_fragments.py  generate_rand_matched.py  generate_rand_uniprot.py  generate_shuffle.py
resources/260531_issue79_esmc_testing/: embeds.ipynb  main.py  pyproject.toml  umap.ipynb
(+308 files in other folders)
