[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "biopython>=1.87",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "kaleido>=1.3.0",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "networkx>=3.6.1",
    "numpy>=2.4.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pyvis>=0.3.2",
    "requests>=2.34.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "streamlit>=1.57.0",
    "tabulate>=0.10.0",
    "tqdm>=4.67.3",
    "wordcloud>=1.9.6",
]
