[project]
name = "260531-issue79-esmc-testing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "esm",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "psycopg2-binary>=2.9.12",
    "torch",
    "umap-learn>=0.5.12",
]

[tool.uv.sources]
esm = { git = "https://github.com/Biohub/esm.git", rev = "c94ed8d" }
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
